Test/crash_logs/crash_log_NameError_2023-10-13_23-27-35.txt
Error Type: NameError
System Information:
System: Windows
Node: DESKTOP-4HHR1F9
Release: 10
Version: 10.0.22621
Machine: AMD64
Processor: AMD64 Family 23 Model 24 Stepping 1, AuthenticAMD
Total RAM: 6323187712 bytes
Available RAM: 995364864 bytes
RAM Usage: 84.3%


Exception Information:
Traceback (most recent call last):
  File "D:\Hackathon\Test\fatal.py", line 60, in generate_random_errors
    print(my_variable)
NameError: name 'my_variable' is not defined
